--- a/Projekt/Teachify/Teachify/Info.plist
+++ b/Projekt/Teachify/Teachify/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CKSharingSupported</key>
+	<true/>
 </dict>
 </plist>
